<resources>
    <string name="app_name">Приют «Второй Шанс»</string>
    <string name="btn_contacts_txt">Контакты</string>
    <string name="btn_pets_txt">Питомцы</string>
    <string name="btn_aviaries_txt">Вольеры</string>
    <string name="header_news">События</string>
    <string name="date_txt_example">10 мая 2021 года</string>
    <string name="text_example">В наш приют была принята собака по имени Лайка. Она находится в вольере под номером 5.</string>
    <string name="pets_header">Наши жильцы</string>
    <string name="btn_news">События</string>
    <string name="pet_name_example">Репер Хаски</string>
    <string name="age_example">Возраст: 5 лет</string>
    <string name="arrive_example">Прибыл: 10 декабря 2020 года</string>
    <string name="go_home_example">Забрали: 10 мая 2021</string>
    <string name="state_example">Состояние: у хозяев</string>
    <string name="filters_btn_txt">Фильтры</string>
    <string name="delete">Удалить</string>
    <string name="txt_name">Кличка</string>
    <string name="pet_age">Возраст</string>
    <string name="getIn_txt">Поступил</string>
    <string name="getOut">Забрали</string>
    <string name="txt_tale">Забрать</string>
    <string name="state_txt">Состояние</string>
    <string name="aviary_txt">Вольер</string>
    <string name="add_pet">Заселить питомца</string>
    <string name="save_txt">Сохранить</string>
    <string name="cancel_txt">Отмена</string>
    <string name="back_txt">Назад ко списку</string>
    <string name="header_moderator_switch">Режим модератора</string>
    <string name="header_aviary_example">Вольер</string>
    <string name="capacity_aviary_example">Загруженность вольера 5 из 20</string>
    <string name="type_aviary_example">Предназначен для агрессивных собак</string>
    <string name="aviary_header">Вольеры</string>
    <string name="add_aviary_text">Добавить вольер</string>
    <string name="aviary_name">Название</string>
    <string name="aviary_current">Количество</string>
    <string name="aviary_type">Тип животных</string>
    <string name="change">редактировать</string>
    <string name="change_photo">Изменить фото</string>
    <string name="delete_photo">Удалить фото</string>
    <string name="exit">Выход</string>
</resources>