<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="#E6E8E6">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <Switch
        android:id="@+id/switch_moderator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_moderator_switch" />


    <Button
        android:id="@+id/btn_news"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:text="@string/btn_news"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_pets"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:text="@string/btn_pets_txt"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_aviaries"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:text="@string/btn_aviaries_txt"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_exit"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:text="@string/exit"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_gravity="bottom"/>

</LinearLayout>