<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pets_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pets_header"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:textColor="@color/white"
            android:text="@string/filters_btn_txt" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E6E8E6">

            <LinearLayout
                android:id="@+id/pets_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/item_example_pets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/photo_example"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/example" />

                    <LinearLayout
                        android:id="@+id/pets_description_example"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pet_name_example"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pet_name_example"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_weight="2"/>

                        <TextView
                            android:id="@+id/pet_age_example"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/age_example"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/pet_in_example"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/arrive_example"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/pet_state_example"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/state_example"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/pet_out_example"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/go_home_example"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:layout_weight="1"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <!--menu-->
    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        android:choiceMode="none"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal" />

</androidx.drawerlayout.widget.DrawerLayout>