<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--        delete_field будем скрывать для пользователя-->
        <LinearLayout
            android:id="@+id/delete_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_delete_pet"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="gone"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/example" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/txt_name"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <!--            для пользователя - inputType = none-->
                    <EditText
                        android:id="@+id/edit_pet_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="кличка"
                        android:ems="10"
                        android:inputType="none"
                        android:textSize="20sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/pet_age"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_pet_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="возраст"
                        android:ems="10"
                        android:inputType="none"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/getIn_txt"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <!--            для пользователя - inputType = none-->
                    <EditText
                        android:id="@+id/edit_pet_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="кличка"
                        android:ems="10"
                        android:inputType="none"
                        android:textSize="20sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/getOut"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_pet_out"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="забрали"
                        android:ems="10"
                        android:inputType="none"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/state_txt"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="забрали"
                android:ems="10"
                android:inputType="none"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_take"
                android:backgroundTint="@color/teal_700"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="chooseTags"
                android:text="@string/txt_tale" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:backgroundTint="@color/teal_700"
                android:layout_margin="8dp"
                android:text="@string/back_txt"
                />

            <!--будет видно только для маодератора, для пользователя кнопка назад-->
            <LinearLayout
                android:id="@+id/edit_pet_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_pet_save"
                    android:backgroundTint="@color/teal_700"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/save_txt" />

                <Button
                    android:id="@+id/btn_pet_cancel"
                    android:backgroundTint="@color/teal_700"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:onClick="exit"
                    android:text="@string/cancel_txt" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <!--menu-->
    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        android:choiceMode="none"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal" />

</androidx.drawerlayout.widget.DrawerLayout>