<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aviary_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/aviary_header"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:onClick="addAviary"
            android:id="@+id/add_aviary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3EAC49"
            android:text="@string/add_aviary_text"
            android:textColor="#FFFFFF" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E6E8E6">

            <LinearLayout
                android:id="@+id/aviaries_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/item_example"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <LinearLayout
                        android:id="@+id/inner_item_example"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/header_aviary"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp"
                            android:text="@string/header_aviary_example"
                            android:textColor="@color/black"
                            android:textSize="@dimen/date_size_news"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/capacity_aviary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_example"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_news" />

                        <TextView
                            android:id="@+id/type_aviary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="TextView" />

                        <Button
                            android:id="@+id/change_example"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#3EAC49"
                            android:text="@string/change"
                            android:textColor="#FFFFFF" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <!--menu-->
    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        android:choiceMode="none"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal" />

</androidx.drawerlayout.widget.DrawerLayout>